# NonlinearLeastSquares

./: CMakeLists.txt  LICENSE  README.md  formatCode.sh
examples/: Example1.cpp  Example2.cpp  Example3.cpp
examples/functors/: Example1Functor.h  Example1Jacobian.h  Example2Functor.h  Example3Functor.h
include/: GaussNewton.h  GradientDescent.h  LevenbergMarquardt.h  ModelFunctor.h  ModelJacobian.h  NonlinearOptimizer.h  SolverOpts.h
